--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
+CONNECTION_URI = mongodb+srv://denverallam:escolario@cluster0.fuwqf.mongodb.net/escolario?retryWrites=true&w=majority
 CONNECTION_URL = mongodb://127.0.0.1:27017
+port = 5000
