--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,12 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC"
