--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  --prefix client && npm run build --prefix client"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
