--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,9 @@
 CONNECTION_URI = mongodb+srv://denverallam:escolario@cluster0.fuwqf.mongodb.net/escolario?retryWrites=true&w=majority
 CONNECTION_URL = mongodb://127.0.0.1:27017
+SECRET = escolario
+
+EMAIL_SERVICE=SendGrid
+EMAIL_USERNAME=apikey
+EMAIL_PASSWORD= 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
+
+EMAIL_FROM=galvanjoshuaraphael@gmail.com
