--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^27.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
@@ -19,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -37,7 +40,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
